--- a/new TNCN/QuanLyThue/pages/ke-toan/dashboard.html
+++ b/new TNCN/QuanLyThue/pages/ke-toan/dashboard.html
@@ -14,6 +14,7 @@
             padding: 20px 0;
         }
 
+
         .main-content {
             padding: 20px;
             height: 100vh;
@@ -88,21 +89,28 @@
 <body>
     <nav class="sidebar">
         <div class="user-info text-center">
-            <h3>Kế Toán</h3>
-            <p id="userName">Chào mừng bạn!</p>
+            <h3>Kế toán</h3>
+            <p id="userName"></p>
         </div>
         <ul class="nav-links">
-            <li><a href="dashboard.html" class="active"><span>Trang chủ</span></a></li>
-            <li><a href="department-management.html"><span>Quản lý phòng ban</span></a></li>
-            <li><a href="salary-input.html"><span>Nhập lương hàng tháng</span></a></li>
-            <li><a href="tax-calculation.html"><span>Tính thuế</span></a></li>
-            <li><a href="deduction-setup.html"><span>Thiết lập miễn giảm trừ</span></a></li>
-            <li><a href="personal-info.html"><span>Thông tin cá nhân</span></a></li>
-            <li><a href="salary-tax-report.html"><span>Xem lương và thuế của từng nhân viên</span></a></li>
-            <li><a href="annual-tax-report.html"><span>Quyết toán thuế năm</span></a></li>
-            <li><a href="../../index.html" id="logoutBtn"><span>Đăng xuất</span></a></li>
+            <li><a href="dashboard.html" class="active"><i class="fas fa-home"></i><span>Trang chủ</span></a></li>
+            <li><a href="department-management.html"><i class="fas fa-building"></i><span>Quản lý phòng ban</span></a>
+            </li>
+            <li><a href="salary-input.html"><i class="fas fa-money-check-alt"></i><span>Nhập lương hàng tháng</span></a>
+            </li>
+            <li><a href="tax-calculation.html"><i class="fas fa-calculator"></i><span>Tính thuế</span></a></li>
+            <li><a href="deduction-setup.html"><i class="fas fa-cogs"></i><span>Thiết lập giảm trừ</span></a></li>
+            <li><a href="personal-info.html"><i class="fas fa-user"></i><span>Thông tin cá nhân</span></a></li>
+            <li><a href="salary-tax-report.html"><i class="fas fa-file-alt"></i><span>Xem lương và thuế của từng nhân
+                        viên</span></a></li>
+            <li><a href="annual-tax-report.html"><i class="fas fa-money-bill-wave"></i><span>Xem quyết
+                        toán
+                        thuế cuối năm</span></a></li>
+            <li><a href="../../index.html" id="logoutBtn"><i class="fas fa-sign-out-alt"></i><span>Đăng xuất</span></a>
+            </li>
         </ul>
     </nav>
+
 
     <main class="main-content">
         <div class="d-block d-md-none">
