--- a/new TNCN/QuanLyThue/index.html
+++ b/new TNCN/QuanLyThue/index.html
@@ -4,37 +4,231 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng Nhập - Quản Lý Thuế</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Đăng Nhập - Hệ Thống Quản Lý Thuế</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        body {
+            background: #f8f9fa;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .login-container {
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+        }
+
+        .login-header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .login-header h2 {
+            color: #2c3e50;
+            font-weight: 600;
+        }
+
+        .form-group label {
+            color: #34495e;
+            font-weight: 500;
+        }
+
+        .form-control {
+            border-radius: 5px;
+            padding: 12px;
+            border: 1px solid #dce4ec;
+        }
+
+        .form-control:focus {
+            border-color: #3498db;
+            box-shadow: 0 0 0 0.2rem rgba(52, 152, 219, 0.25);
+        }
+
+        .btn-login {
+            background-color: #3498db;
+            color: white;
+            padding: 12px;
+            border: none;
+            border-radius: 5px;
+            width: 100%;
+            font-weight: 500;
+            margin-top: 20px;
+        }
+
+        .btn-login:hover {
+            background-color: #2980b9;
+            color: white;
+        }
+
+        .login-footer {
+            text-align: center;
+            margin-top: 20px;
+            color: #7f8c8d;
+        }
+
+        #loginError {
+            display: none;
+            margin-top: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            background-color: #f8d7da;
+            border: 1px solid #f5c6cb;
+            color: #721c24;
+        }
+
+        /* CSS cho select vai trò */
+        .form-group select.form-control {
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            height: calc(1.5em + 1rem + 2px);
+            padding: 0.5rem 1rem;
+            color: #495057;
+            background-color: #fff;
+            font-size: 1rem;
+        }
+
+        /* Thêm style để ẩn mũi tên mặc định trên IE */
+        .form-group select.form-control::-ms-expand {
+            display: none;
+        }
+
+        .form-group select.form-control option {
+            padding: 10px;
+            font-size: 1rem;
+            color: #495057;
+        }
+
+        .form-group select.form-control option:first-child {
+            color: #6c757d;
+            font-style: italic;
+        }
+
+        .form-group select.form-control:focus {
+            border-color: #3498db;
+            box-shadow: 0 0 0 0.2rem rgba(52, 152, 219, 0.25);
+        }
+
+        /* Thêm icon cho select */
+        .form-group .input-group-text {
+            background-color: #f8f9fa;
+            border: 1px solid #dce4ec;
+            color: #495057;
+        }
+
+        /* Điều chỉnh label */
+        .form-group label {
+            color: #34495e;
+            font-weight: 500;
+            margin-bottom: 0.5rem;
+            display: block;
+        }
+
+        /* Thêm style cho select container */
+        .select-container {
+            position: relative;
+        }
+
+        .select-container::after {
+            content: '\f107';
+            font-family: 'Font Awesome 5 Free';
+            font-weight: 900;
+            position: absolute;
+            right: 15px;
+            top: 50%;
+            transform: translateY(-50%);
+            pointer-events: none;
+            color: #495057;
+        }
+    </style>
 </head>
 
 <body>
     <div class="login-container">
-        <div class="login-box">
+        <div class="login-header">
             <h2>Đăng Nhập</h2>
-            <form id="loginForm">
-                <div class="form-group">
-                    <label>Tên đăng nhập:</label>
-                    <input type="text" id="username" required>
+            <p class="text-muted">Hệ thống Quản lý Thuế Thu nhập cá nhân</p>
+        </div>
+
+        <form id="loginForm">
+            <div class="form-group">
+                <label for="username">Tên đăng nhập</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fas fa-user"></i>
+                        </span>
+                    </div>
+                    <input type="text" class="form-control" id="username" required>
                 </div>
-                <div class="form-group">
-                    <label>Mật khẩu:</label>
-                    <input type="password" id="password" required>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Mật khẩu</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </div>
+                    <input type="password" class="form-control" id="password" required>
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                            <i class="fas fa-eye"></i>
+                        </button>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label>Vai trò:</label>
-                    <select id="role">
+            </div>
+
+            <div class="form-group">
+                <label for="role">Vai trò</label>
+                <div class="select-container">
+                    <select class="form-control" id="role" required>
+                        <option value="">Chọn vai trò...</option>
                         <option value="nhan_vien">Nhân viên</option>
                         <option value="truong_phong">Trưởng phòng</option>
                         <option value="ke_toan">Kế toán</option>
                     </select>
                 </div>
-                <button type="submit">Đăng Nhập</button>
-            </form>
+            </div>
+
+            <div id="loginError" class="alert alert-danger" style="display: none;"></div>
+
+            <button type="submit" class="btn btn-login">
+                <i class="fas fa-sign-in-alt mr-2"></i>Đăng nhập
+            </button>
+        </form>
+
+        <div class="login-footer">
+            <p>© 2024 Hệ thống Quản lý Thuế. All rights reserved.</p>
         </div>
     </div>
 
-    <script src="./js/auth.js"></script>
+    <script>
+        // Xử lý hiện/ẩn mật khẩu
+        document.getElementById('togglePassword').addEventListener('click', function () {
+            const passwordInput = document.getElementById('password');
+            const icon = this.querySelector('i');
+
+            if (passwordInput.type === 'password') {
+                passwordInput.type = 'text';
+                icon.classList.remove('fa-eye');
+                icon.classList.add('fa-eye-slash');
+            } else {
+                passwordInput.type = 'password';
+                icon.classList.remove('fa-eye-slash');
+                icon.classList.add('fa-eye');
+            }
+        });
+    </script>
+    <script type="module" src="./js/auth.js"></script>
 </body>
 
 </html>
