--- a/new TNCN/QuanLyThue/pages/ke-toan/tax-calculation.html
+++ b/new TNCN/QuanLyThue/pages/ke-toan/tax-calculation.html
@@ -19,16 +19,17 @@
             padding: 20px;
             height: 100vh;
             /* overflow: hidden; */
-            display: flex;
             flex-direction: column;
         }
 
 
         .modal-body {
-            max-height: calc(100vh - 180px);
+            max-height: 68vh;
             overflow-y: auto;
             padding: 20px;
             background-color: #f8f9fa;
+            flex-direction: column;
+
         }
 
         /* Style cho tax detail */
@@ -119,6 +120,8 @@
             background-color: #f8f9fa;
             border-top: 1px solid #dee2e6;
             padding: 15px 20px;
+
+
         }
 
         .modal-footer .btn {
@@ -205,21 +208,29 @@
     <!-- Sidebar -->
     <nav class="sidebar">
         <div class="user-info text-center">
-            <h3>Kế Toán</h3>
-            <p id="userName">Chào mừng bạn!</p>
+            <h3>Kế toán</h3>
+            <p id="userName"></p>
         </div>
         <ul class="nav-links">
-            <li><a href="dashboard.html"><span>Trang chủ</span></a></li>
-            <li><a href="department-management.html"><span>Quản lý phòng ban</span></a></li>
-            <li><a href="salary-input.html"><span>Nhập lương hàng tháng</span></a></li>
-            <li><a href="tax-calculation.html" class="active"><span>Tính thuế</span></a></li>
-            <li><a href="deduction-setup.html"><span>Thiết lập miễn giảm trừ</span></a></li>
-            <li><a href="personal-info.html"><span>Thông tin cá nhân</span></a></li>
-            <li><a href="salary-tax-report.html"><span>Xem lương và thuế</span></a></li>
-            <li><a href="annual-tax-report.html"><span>Quyết toán thuế năm</span></a></li>
-            <li><a href="../../index.html" id="logoutBtn"><span>Đăng xuất</span></a></li>
+            <li><a href="dashboard.html"><i class="fas fa-home"></i><span>Trang chủ</span></a></li>
+            <li><a href="department-management.html"><i class="fas fa-building"></i><span>Quản lý phòng ban</span></a>
+            </li>
+            <li><a href="salary-input.html"><i class="fas fa-money-check-alt"></i><span>Nhập lương hàng tháng</span></a>
+            </li>
+            <li><a href="tax-calculation.html" class="active"><i class="fas fa-calculator"></i><span>Tính
+                        thuế</span></a></li>
+            <li><a href="deduction-setup.html"><i class="fas fa-cogs"></i><span>Thiết lập giảm trừ</span></a></li>
+            <li><a href="personal-info.html"><i class="fas fa-user"></i><span>Thông tin cá nhân</span></a></li>
+            <li><a href="salary-tax-report.html"><i class="fas fa-file-alt"></i><span>Xem lương và thuế của từng nhân
+                        viên</span></a></li>
+            <li><a href="annual-tax-report.html"><i class="fas fa-money-bill-wave"></i><span>Xem quyết
+                        toán
+                        thuế cuối năm</span></a></li>
+            <li><a href="../../index.html" id="logoutBtn"><i class="fas fa-sign-out-alt"></i><span>Đăng xuất</span></a>
+            </li>
         </ul>
     </nav>
+
 
     <!-- Main Content -->
     <main class="main-content">
@@ -286,9 +297,9 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title">Tính Thuế Thu Nhập Cá Nhân</h5>
-                        <button type="button" class="close" data-dismiss="modal">
+                        <!-- <button type="button" class="close" data-dismiss="modal">
                             <span>&times;</span>
-                        </button>
+                        </button> -->
                     </div>
                     <div class="modal-body">
                         <form id="taxCalculationForm">
@@ -361,9 +372,9 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title">Chi Tiết Tính Thuế</h5>
-                        <button type="button" class="close" data-dismiss="modal">
+                        <!-- <button type="button" class="close" data-dismiss="modal">
                             <span>&times;</span>
-                        </button>
+                        </button> -->
                     </div>
                     <div class="modal-body">
                         <div id="taxResultContent">
@@ -371,13 +382,14 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
                         <button type="button" class="btn btn-success" id="sendReportBtn">
                             <i class="fas fa-paper-plane"></i> Gửi báo cáo
                         </button>
                         <button type="button" class="btn btn-primary" id="downloadReportBtn">
                             <i class="fas fa-download"></i> Tải xuống
                         </button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+
                     </div>
                 </div>
             </div>
