--- a/new TNCN/QuanLyThue/pages/nhan-vien/profile.html
+++ b/new TNCN/QuanLyThue/pages/nhan-vien/profile.html
@@ -24,6 +24,14 @@
             margin-bottom: 30px;
         }
 
+        .main-content {
+            padding: 20px;
+            height: 100vh;
+            /* overflow: hidden; */
+            display: flex;
+            flex-direction: column;
+        }
+
         .profile-avatar {
             width: 150px;
             height: 150px;
@@ -104,12 +112,16 @@
             <p id="employeeName">Chào mừng bạn!</p>
         </div>
         <ul class="nav-links">
-            <li><a href="dashboard.html" class=""><span>Trang chủ</span></a></li>
-            <li><a href="salary-and-tax-report.html"><span>Xem lương và thuế TNCN</span></a></li>
-            <li><a href="annual-tax-report.html"><span>Xem quyết toán thuế thu nhập cả năm</span></a></li>
-            <li><a href="profile.html" class="active"><span>Thông tin cá nhân</span></a></li>
-            <li><a href="tax-calculator.html" class=""><span>Tính thử thuế TNCN</span></a></li>
-            <li><a href="#" id="logoutBtn"><span>Đăng xuất</span></a></li>
+            <li><a href="dashboard.html"><i class="fas fa-home"></i><span>Trang chủ</span></a></li>
+            <li><a href="salary-and-tax-report.html"><i class="fas fa-file-alt"></i><span>Xem lương và thuế
+                        TNCN</span></a></li>
+            <li><a href="annual-tax-report.html"><i class="fas fa-money-bill-wave"></i><span>Xem quyết toán thuế thu
+                        nhập cả năm</span></a></li>
+            <li><a href="profile.html" class="active"><i class="fas fa-user"></i><span>Thông tin cá nhân</span></a></li>
+            <li><a href="tax-calculator.html"><i class="fas fa-calculator"></i> <span>Tính thử thuế
+                        TNCN</span></a></li>
+            <li><a href="../../index.html" id="logoutBtn"><i class="fas fa-sign-out-alt"></i><span>Đăng xuất</span></a>
+            </li>
         </ul>
     </nav>
 
